--- a/belgeler/kap-orgusu/olcekler.html
+++ b/belgeler/kap-orgusu/olcekler.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div data-deveb="kaplama ortada" data-deveb="24 24p">
+<div data-deveb="24 24p kaplama ortada">
   <div data-deveb="23">
     <div data-deveb="24">
       <h1>Ölçekleri</h1>
