--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -27,7 +27,7 @@
   <div data-deveb="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
   <div data-deveb="kaplama ortada" data-deveb="24p">
-    <di data-deveb="23">
+    <div data-deveb="23">
       <h1>Takımlar</h1>
       <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
 
@@ -39,35 +39,35 @@
           Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
         </p>
       </div>
-      <di data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
+      <div data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
         <p>
           <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
           <span class="metin-olumlu">Örnek Takımı</span> <br>
           Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
         </p>
       </div>
-      <di data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
+      <div data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
         <p>
           <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
           <span class="metin-olumlu">Başarım Takımı</span> <br>
           Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
         </p>
       </div>
-      <di data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
+      <div data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
         <p>
           <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
           <span class="metin-olumlu">Görüş Takımı</span> <br>
           Deveb hakkında izlenimlerini, fikirlerini, beklentilerinidata-ortaya koymak için bir araya gelirler
         </p>
       </div>
-      <di data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
+      <div data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
         <p>
           <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
           <span class="metin-olumlu">Belge Takımı</span> <br>
           Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
         </p>
       </div>
-      <di data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
+      <div data-deveb="1"data-deveb="ufk-1"data-deveb="ort-1">
         <p>
           <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
           <span class="metin-olumlu">Yardım Takımı</span> <br>
