--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -26,7 +26,7 @@
 <body>
   <div data-deveb="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-  <div data-deveb="kaplama ortada" data-deveb="24p">
+  <div data-deveb="24p kaplama ortada">
     <div data-deveb="23">
       <h1>Takımlar</h1>
       <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
