--- a/belgeler/kap-orgusu/olcekler.html
+++ b/belgeler/kap-orgusu/olcekler.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div data-gnl="24 24p kaplama ortada">
+<div data-gnl="24 24p" data-deveb="kaplama ortada">
   <div data-gnl="23">
     <div data-gnl="24">
       <h1>Ölçekleri</h1>
