--- a/belgeler/kap-orgusu/olcekler.html
+++ b/belgeler/kap-orgusu/olcekler.html
@@ -33,10 +33,10 @@
       <p>Aşağıdaki tabloda 24 parçalı gruba kadar belirlenmiş parça gruplarını görmektesiniz. Bir genişlikte tablodaki değerlere göre düzen kurmak istiyorsanız tip="değer" kuralı üzerinden sınıf yazarsınız. Örnek: data-gnl="4 8p" yani tüm ekranlarda içinde bulunduğu genişliğin 8'e bölünmüş eşit parçasından 4 tanesinin toplamı kadar genişlik kullanılacağını belirtir. </p>
     </div>
     <div class="beri-üst-1" data-gnl="24">
-      <div class="beri-alt-1" data-gnl="24">
+      <div data-gnl="24">
         <div class="kutu kutu-genel" data-gnl="24">
           <ul class="liste-temiz">
-            <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> Tabloda görülen değerler html etiketlerinde tip="değer" şeklinde yazılarak data-gnl=" ",data-ufk=" ", data-ort=" ", data-byk=" "  ekran tipleriyle kullanılır.</li>
+            <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> Tabloda görülen değerler html etiketlerinde tip="değer" şeklinde yazılarak data-gnl=" ", data-ufk=" ", data-ort=" ", data-byk=" "  ekran tipleriyle kullanılır.</li>
             <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> En dış etikette belirlediğiniz parça grubunu sürekli kullanacaksanız iç tiplerde tekrar belirtmenize gerek yoktur. Örnek "24p" > "8 24p" "8 24p" "8 24p" yerine "24p" > "8" "8" "8" yazabilirsiniz.</li>
             <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> En dış etikette belirlediğiniz parça grubundan farklı bir parça grubunu iç tiplerde kullanabilirsiniz. Örnek "24p" > "8" "8" "8" yerine "24p" > "8" "4 12p" "8" yazabilirsiniz.</li>
             <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> En dış etikette belirlediğiniz parça grubunu iç tiplerde 1 değerini yazarak genişliği eşit olarak bölebilirsiniz. Örnek "6p" > "1" "1" "1" "1" "1" "1" - Eğer "6p" yerine "3p" yazarsanız 6şarlı alan 3erli olacaktır.</li>
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div data-gnl="24" style="background-color:#eee; padding:5px; border-radius:3px;">
+      <div data-gnl="24" style="background-color:#eee; padding:5px; margin-top:10px border-radius:3px;">
         <div data-gnl="1"><div class="kutu kutu-genel"><a href="https://data-deveb.github.io/belgeler/kap-olcekleri/1p.html">1p</a></div></div>
         <div data-gnl="23">
           <div data-gnl="24"><div class="kutu kutu-genel" data-gnl="1 1p"><span data-metin="olumlu">data-gnl="</span><span data-metin="dikkat">1 1p</span><span data-metin="olumlu">"</span></div></div>
