--- a/temel/header.html
+++ b/temel/header.html
@@ -1,9 +1,9 @@
-<div id="header" data-deveb="24 24p ortada göbekte" class="ap-beyaz beri-alt-1 kenar-alt" style="min-height:60px;">
-  <div data-deveb="23 ger">
-    <ul class="menü-genel" data-deveb="8 kap göbekte">
+<div id="header" data-deveb="ortada göbekte" data-gnl="24 24p" class="ap-beyaz beri-alt-1 kenar-alt" style="min-height:60px;">
+  <div data-deveb="ger" data-gnl="23">
+    <ul class="menü-genel" data-deveb="kap göbekte">
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
-    <ul class="menü-genel" data-deveb="16 kap göbekte">
+    <ul class="menü-genel" data-deveb="kap göbekte">
       <li><a href="https://data-deveb.github.io/belgeler/kurulum.html">Kurulum</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
