--- a/index.html
+++ b/index.html
@@ -24,43 +24,43 @@
   <![endif]-->
 </head>
 <body>
-  <div data-deveb~="1 1p" class="header" w3-include-html="/temel/header.html"></div>
-  <div data-deveb~="8 8p" data-deveb~="ort-8p">
-      <div data-deveb~="8" data-deveb~="ort-4">
-        <div style="overflow:hidden;" data-deveb~="1 1p">
+  <div data-gnl="1 1p" class="header" w3-include-html="/temel/header.html"></div>
+  <div data-gnl="8 8p" data-data-ort="8p">
+      <div data-gnl="8" data-data-ort="4">
+        <div style="overflow:hidden;" data-gnl="1 1p">
           <h1 class="metin-deveb  beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
           <p class="metin-gri-3 beri-2">
             Ağ sayfalarında kullanılması için Türkçe olarak geliştirilen bir önyüz iskeletidir. İngilizce'de frontend framework diye anılmaktadır.
   Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
           </p>
-          <p class="metin-gri-3 beri-2" data-deveb="ortada" data-deveb~="1 1p">
+          <p class="metin-gri-3 beri-2" data-deveb="ortada" data-gnl="1 1p">
             <a href="/belgeler/kap-orgusu.html" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;margin:0 5px;">BAŞLA</a>
             <a href="https://www.facebook.com/groups/1818283228485179/" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px; margin:0 5px;">KATIL</a>
           </p>
         </div>
       </div>
-      <div class="merkez direk" data-deveb~="8" data-deveb~="ort-4">
-        <div data-deveb~="6">
-          <div data-deveb~="8" style="padding-left:2%">
+      <div class="merkez direk" data-gnl="8" data-data-ort="4">
+        <div data-gnl="6">
+          <div data-gnl="8" style="padding-left:2%">
 
-            <div class="beri-alt-1" data-deveb~="8" style="background-color:#ccc; height:200px;"></div>
-            <div class="ap-deveb beri-alt-1" data-deveb~="8" style="height:60px;"></div>
-            <div class="ap-deveb beri-alt-1" data-deveb~="1 5p" style="height:80px;"></div>
+            <div class="beri-alt-1" data-gnl="8" style="background-color:#ccc; height:200px;"></div>
+            <div class="ap-deveb beri-alt-1" data-gnl="8" style="height:60px;"></div>
+            <div class="ap-deveb beri-alt-1" data-gnl="1 5p" style="height:80px;"></div>
 
-            <div data-deveb~="4 5p">
-              <div class="beri-sol-1 beri-alt-1" data-deveb~="5" style="background-color:#ccc;"></div>
+            <div data-gnl="4 5p">
+              <div class="beri-sol-1 beri-alt-1" data-gnl="5" style="background-color:#ccc;"></div>
             </div>
 
-            <div class="ap-deveb" data-deveb~="8" style="height:60px;"></div>
+            <div class="ap-deveb" data-gnl="8" style="height:60px;"></div>
 
           </div>
         </div>
-        <div data-deveb~="2">
-          <div class="beri-sol-2 ap-deveb" data-deveb~="6"></div>
+        <div data-gnl="2">
+          <div class="beri-sol-2 ap-deveb" data-gnl="6"></div>
         </div>
       </div>
   </div>
-  <div data-deveb~="1 1p" w3-include-html="/temel/foot.html"></div>
+  <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>w3.includeHTML();</script>
 </body>
