--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
   <div data-gnl="1 1p" class="header" w3-include-html="/temel/header.html"></div>
-  <div data-gnl="8 8p" data-data-ort="8p">
-      <div data-gnl="8" data-data-ort="4">
+  <div data-gnl="8 8p" data-ort="8p">
+      <div data-gnl="8" data-ort="4">
         <div style="overflow:hidden;" data-gnl="1 1p">
           <h1 class="metin-deveb  beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
           <p class="metin-gri-3 beri-2">
@@ -39,7 +39,7 @@
           </p>
         </div>
       </div>
-      <div class="merkez direk" data-gnl="8" data-data-ort="4">
+      <div class="merkez direk" data-gnl="8" data-ort="4">
         <div data-gnl="6">
           <div data-gnl="8" style="padding-left:2%">
 
