--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -59,11 +59,11 @@
       <b>Renk Aydınlığı:</b><br>en-soluk -  çok-soluk - soluk - az-soluk - normal - az-parlak - parlak - çok-parlak - en-parlak<br>
     <b>Kullanım tipi:</b><br>data-deveb="metin-birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800"</p>
   </div>
-  <div class="" data-deveb="4 4p" data-deveb="ort-4 4p">
+  <div class="" data-deveb="4 4p" data-ort="4 4p">
     <div data-deveb="4">
       <h1>Renk Tablosu Örneği</h1>
     </div>
-    <div data-gnl="2" data-deveb="ort-1">
+    <div data-gnl="2" data-ort="1">
       <div data-deveb="1 1p" data-arka="ana">data-arka="ana"</div>
       <div data-deveb="1 1p" data-arka="ana 100">data-arka="ana 100"</div>
       <div data-deveb="1 1p" data-arka="ana 200">data-arka="ana 200"</div>
@@ -84,7 +84,7 @@
       <div data-deveb="1 1p" data-arka="ana çok-parlak">data-arka="ana çok-parlak"</div>
       <div data-deveb="1 1p" data-arka="ana en-parlak">data-arka="ana en-parlak"</div>
     </div>
-    <div data-gnl="2" data-deveb="ort-1">
+    <div data-gnl="2" data-ort="1">
       <div data-deveb="1 1p" data-arka="ara">data-arka="ara"</div>
       <div data-deveb="1 1p" data-arka="ara 100">data-arka="ara 100"</div>
       <div data-deveb="1 1p" data-arka="ara 200">data-arka="ara 200"</div>
@@ -105,7 +105,7 @@
       <div data-deveb="1 1p" data-arka="ara çok-parlak">data-arka="ara çok-parlak"</div>
       <div data-deveb="1 1p" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
     </div>
-    <div data-gnl="2" data-deveb="ort-1">
+    <div data-gnl="2" data-ort="1">
       <div data-deveb="1 1p" data-arka="birincil">data-arka="birincil"</div>
       <div data-deveb="1 1p" data-arka="birincil 100">data-arka="birincil 100"</div>
       <div data-deveb="1 1p" data-arka="birincil 200">data-arka="birincil 200"</div>
@@ -126,7 +126,7 @@
       <div data-deveb="1 1p" data-arka="birincil çok-parlak">data-arka="birincil çok-parlak"</div>
       <div data-deveb="1 1p" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
     </div>
-    <div data-gnl="2" data-deveb="ort-1">
+    <div data-gnl="2" data-ort="1">
       <div data-deveb="1 1p" data-arka="ikincil">data-arka="ikincil"</div>
       <div data-deveb="1 1p" data-arka="ikincil 100">data-arka="ikincil 100"</div>
       <div data-deveb="1 1p" data-arka="ikincil 200">data-arka="ikincil 200"</div>
