--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -59,8 +59,8 @@
       <b>Renk Aydınlığı:</b><br>en-soluk -  çok-soluk - soluk - az-soluk - normal - az-parlak - parlak - çok-parlak - en-parlak<br>
     <b>Kullanım tipi:</b><br>data-deveb="metin-birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800"</p>
   </div>
-  <div class="" data-deveb="4 4p" data-ort="4 4p">
-    <div data-deveb="4">
+  <div class="" data-gnl="4 4p" data-ort="4 4p">
+    <div data-gnl="4">
       <h1>Renk Tablosu Örneği</h1>
     </div>
     <div data-gnl="2" data-ort="1">
@@ -151,11 +151,11 @@
   <div data-gnl="24">
     <h2>Örnek</h2>
   </div>
-  <div data-deveb="1 2p">
+  <div data-gnl="1 2p">
     <iframe data-gnl="2" height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/html/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
   </div>
-  <div data-deveb="1 2p">
-    <iframe data-gnl="2"height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/result/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
+  <div data-gnl="1 2p">
+    <iframe data-gnl="2" height="300" src="//jsfiddle.net/deveb/yzfd5edf/embedded/result/" allowfullscreen="allowfullscreen" style="border:0 solid red;"></iframe>
   </div>
 </div>
 
