--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -24,7 +24,7 @@
   <![endif]-->
 </head>
 <body>
-  <div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+  <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 <div data-deveb="kaplama ortada" data-gnl="24 24p">
 <div data-gnl="23" data-ufk="23 24p">
     <h1>Renk Örgüsü</h1>
@@ -64,88 +64,88 @@
       <h1>Renk Tablosu Örneği</h1>
     </div>
     <div data-gnl="2" data-ort="1">
-      <div data-deveb="1 1p" data-arka="ana">data-arka="ana"</div>
-      <div data-deveb="1 1p" data-arka="ana 100">data-arka="ana 100"</div>
-      <div data-deveb="1 1p" data-arka="ana 200">data-arka="ana 200"</div>
-      <div data-deveb="1 1p" data-arka="ana 300">data-arka="ana 300"</div>
-      <div data-deveb="1 1p" data-arka="ana 400">data-arka="ana 400"</div>
-      <div data-deveb="1 1p" data-arka="ana 500">data-arka="ana 500"</div>
-      <div data-deveb="1 1p" data-arka="ana 600">data-arka="ana 600"</div>
-      <div data-deveb="1 1p" data-arka="ana 700">data-arka="ana 700"</div>
-      <div data-deveb="1 1p" data-arka="ana 800">data-arka="ana 800"</div>
-      <div data-deveb="1 1p" data-arka="ana 900">data-arka="ana 900"</div>
-      <div data-deveb="1 1p" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ana çok-soluk">data-arka="ana çok-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ana soluk">data-arka="ana soluk"</div>
-      <div data-deveb="1 1p" data-arka="ana az-soluk">data-arka="ana az-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ana normal">data-arka="ana normal"</div>
-      <div data-deveb="1 1p" data-arka="ana az-parlak">data-arka="ana az-parlak"</div>
-      <div data-deveb="1 1p" data-arka="ana parlak">data-arka="ana parlak"</div>
-      <div data-deveb="1 1p" data-arka="ana çok-parlak">data-arka="ana çok-parlak"</div>
-      <div data-deveb="1 1p" data-arka="ana en-parlak">data-arka="ana en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana">data-arka="ana"</div>
+      <div data-gnl="1 1p" data-arka="ana 100">data-arka="ana 100"</div>
+      <div data-gnl="1 1p" data-arka="ana 200">data-arka="ana 200"</div>
+      <div data-gnl="1 1p" data-arka="ana 300">data-arka="ana 300"</div>
+      <div data-gnl="1 1p" data-arka="ana 400">data-arka="ana 400"</div>
+      <div data-gnl="1 1p" data-arka="ana 500">data-arka="ana 500"</div>
+      <div data-gnl="1 1p" data-arka="ana 600">data-arka="ana 600"</div>
+      <div data-gnl="1 1p" data-arka="ana 700">data-arka="ana 700"</div>
+      <div data-gnl="1 1p" data-arka="ana 800">data-arka="ana 800"</div>
+      <div data-gnl="1 1p" data-arka="ana 900">data-arka="ana 900"</div>
+      <div data-gnl="1 1p" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana çok-soluk">data-arka="ana çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana soluk">data-arka="ana soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana az-soluk">data-arka="ana az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ana normal">data-arka="ana normal"</div>
+      <div data-gnl="1 1p" data-arka="ana az-parlak">data-arka="ana az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana parlak">data-arka="ana parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana çok-parlak">data-arka="ana çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ana en-parlak">data-arka="ana en-parlak"</div>
     </div>
     <div data-gnl="2" data-ort="1">
-      <div data-deveb="1 1p" data-arka="ara">data-arka="ara"</div>
-      <div data-deveb="1 1p" data-arka="ara 100">data-arka="ara 100"</div>
-      <div data-deveb="1 1p" data-arka="ara 200">data-arka="ara 200"</div>
-      <div data-deveb="1 1p" data-arka="ara 300">data-arka="ara 300"</div>
-      <div data-deveb="1 1p" data-arka="ara 400">data-arka="ara 400"</div>
-      <div data-deveb="1 1p" data-arka="ara 500">data-arka="ara 500"</div>
-      <div data-deveb="1 1p" data-arka="ara 600">data-arka="ara 600"</div>
-      <div data-deveb="1 1p" data-arka="ara 700">data-arka="ara 700"</div>
-      <div data-deveb="1 1p" data-arka="ara 800">data-arka="ara 800"</div>
-      <div data-deveb="1 1p" data-arka="ara 900">data-arka="ara 900"</div>
-      <div data-deveb="1 1p" data-arka="ara en-soluk">data-arka="ara en-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ara çok-soluk">data-arka="ara çok-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ara soluk">data-arka="ara soluk"</div>
-      <div data-deveb="1 1p" data-arka="ara az-soluk">data-arka="ara az-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ara normal">data-arka="ara normal"</div>
-      <div data-deveb="1 1p" data-arka="ara az-parlak">data-arka="ara az-parlak"</div>
-      <div data-deveb="1 1p" data-arka="ara parlak">data-arka="ara parlak"</div>
-      <div data-deveb="1 1p" data-arka="ara çok-parlak">data-arka="ara çok-parlak"</div>
-      <div data-deveb="1 1p" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara">data-arka="ara"</div>
+      <div data-gnl="1 1p" data-arka="ara 100">data-arka="ara 100"</div>
+      <div data-gnl="1 1p" data-arka="ara 200">data-arka="ara 200"</div>
+      <div data-gnl="1 1p" data-arka="ara 300">data-arka="ara 300"</div>
+      <div data-gnl="1 1p" data-arka="ara 400">data-arka="ara 400"</div>
+      <div data-gnl="1 1p" data-arka="ara 500">data-arka="ara 500"</div>
+      <div data-gnl="1 1p" data-arka="ara 600">data-arka="ara 600"</div>
+      <div data-gnl="1 1p" data-arka="ara 700">data-arka="ara 700"</div>
+      <div data-gnl="1 1p" data-arka="ara 800">data-arka="ara 800"</div>
+      <div data-gnl="1 1p" data-arka="ara 900">data-arka="ara 900"</div>
+      <div data-gnl="1 1p" data-arka="ara en-soluk">data-arka="ara en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara çok-soluk">data-arka="ara çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara soluk">data-arka="ara soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara az-soluk">data-arka="ara az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ara normal">data-arka="ara normal"</div>
+      <div data-gnl="1 1p" data-arka="ara az-parlak">data-arka="ara az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara parlak">data-arka="ara parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara çok-parlak">data-arka="ara çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
     </div>
     <div data-gnl="2" data-ort="1">
-      <div data-deveb="1 1p" data-arka="birincil">data-arka="birincil"</div>
-      <div data-deveb="1 1p" data-arka="birincil 100">data-arka="birincil 100"</div>
-      <div data-deveb="1 1p" data-arka="birincil 200">data-arka="birincil 200"</div>
-      <div data-deveb="1 1p" data-arka="birincil 300">data-arka="birincil 300"</div>
-      <div data-deveb="1 1p" data-arka="birincil 400">data-arka="birincil 400"</div>
-      <div data-deveb="1 1p" data-arka="birincil 500">data-arka="birincil 500"</div>
-      <div data-deveb="1 1p" data-arka="birincil 600">data-arka="birincil 600"</div>
-      <div data-deveb="1 1p" data-arka="birincil 700">data-arka="birincil 700"</div>
-      <div data-deveb="1 1p" data-arka="birincil 800">data-arka="birincil 800"</div>
-      <div data-deveb="1 1p" data-arka="birincil 900">data-arka="birincil 900"</div>
-      <div data-deveb="1 1p" data-arka="birincil en-soluk">data-arka="birincil en-soluk"</div>
-      <div data-deveb="1 1p" data-arka="birincil çok-soluk">data-arka="birincil çok-soluk"</div>
-      <div data-deveb="1 1p" data-arka="birincil soluk">data-arka="birincil soluk"</div>
-      <div data-deveb="1 1p" data-arka="birincil az-soluk">data-arka="birincil az-soluk"</div>
-      <div data-deveb="1 1p" data-arka="birincil normal">data-arka="birincil normal"</div>
-      <div data-deveb="1 1p" data-arka="birincil az-parlak">data-arka="birincil az-parlak"</div>
-      <div data-deveb="1 1p" data-arka="birincil parlak">data-arka="birincil parlak"</div>
-      <div data-deveb="1 1p" data-arka="birincil çok-parlak">data-arka="birincil çok-parlak"</div>
-      <div data-deveb="1 1p" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil">data-arka="birincil"</div>
+      <div data-gnl="1 1p" data-arka="birincil 100">data-arka="birincil 100"</div>
+      <div data-gnl="1 1p" data-arka="birincil 200">data-arka="birincil 200"</div>
+      <div data-gnl="1 1p" data-arka="birincil 300">data-arka="birincil 300"</div>
+      <div data-gnl="1 1p" data-arka="birincil 400">data-arka="birincil 400"</div>
+      <div data-gnl="1 1p" data-arka="birincil 500">data-arka="birincil 500"</div>
+      <div data-gnl="1 1p" data-arka="birincil 600">data-arka="birincil 600"</div>
+      <div data-gnl="1 1p" data-arka="birincil 700">data-arka="birincil 700"</div>
+      <div data-gnl="1 1p" data-arka="birincil 800">data-arka="birincil 800"</div>
+      <div data-gnl="1 1p" data-arka="birincil 900">data-arka="birincil 900"</div>
+      <div data-gnl="1 1p" data-arka="birincil en-soluk">data-arka="birincil en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil çok-soluk">data-arka="birincil çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil soluk">data-arka="birincil soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil az-soluk">data-arka="birincil az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="birincil normal">data-arka="birincil normal"</div>
+      <div data-gnl="1 1p" data-arka="birincil az-parlak">data-arka="birincil az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil parlak">data-arka="birincil parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil çok-parlak">data-arka="birincil çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
     </div>
     <div data-gnl="2" data-ort="1">
-      <div data-deveb="1 1p" data-arka="ikincil">data-arka="ikincil"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 100">data-arka="ikincil 100"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 200">data-arka="ikincil 200"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 300">data-arka="ikincil 300"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 400">data-arka="ikincil 400"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 500">data-arka="ikincil 500"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 600">data-arka="ikincil 600"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 700">data-arka="ikincil 700"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 800">data-arka="ikincil 800"</div>
-      <div data-deveb="1 1p" data-arka="ikincil 900">data-arka="ikincil 900"</div>
-      <div data-deveb="1 1p" data-arka="ikincil en-soluk">data-arka="ikincil en-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ikincil çok-soluk">data-arka="ikincil çok-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ikincil soluk">data-arka="ikincil soluk"</div>
-      <div data-deveb="1 1p" data-arka="ikincil az-soluk">data-arka="ikincil az-soluk"</div>
-      <div data-deveb="1 1p" data-arka="ikincil normal">data-arka="ikincil normal"</div>
-      <div data-deveb="1 1p" data-arka="ikincil az-parlak">data-arka="ikincil az-parlak"</div>
-      <div data-deveb="1 1p" data-arka="ikincil parlak">data-arka="ikincil parlak"</div>
-      <div data-deveb="1 1p" data-arka="ikincil çok-parlak">data-arka="ikincil çok-parlak"</div>
-      <div data-deveb="1 1p" data-arka="ikincil en-parlak">data-arka="ikincil en-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil">data-arka="ikincil"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 100">data-arka="ikincil 100"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 200">data-arka="ikincil 200"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 300">data-arka="ikincil 300"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 400">data-arka="ikincil 400"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 500">data-arka="ikincil 500"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 600">data-arka="ikincil 600"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 700">data-arka="ikincil 700"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 800">data-arka="ikincil 800"</div>
+      <div data-gnl="1 1p" data-arka="ikincil 900">data-arka="ikincil 900"</div>
+      <div data-gnl="1 1p" data-arka="ikincil en-soluk">data-arka="ikincil en-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil çok-soluk">data-arka="ikincil çok-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil soluk">data-arka="ikincil soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil az-soluk">data-arka="ikincil az-soluk"</div>
+      <div data-gnl="1 1p" data-arka="ikincil normal">data-arka="ikincil normal"</div>
+      <div data-gnl="1 1p" data-arka="ikincil az-parlak">data-arka="ikincil az-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil parlak">data-arka="ikincil parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil çok-parlak">data-arka="ikincil çok-parlak"</div>
+      <div data-gnl="1 1p" data-arka="ikincil en-parlak">data-arka="ikincil en-parlak"</div>
     </div>
   </div>
   <div data-gnl="24">
@@ -160,7 +160,7 @@
 </div>
 
 </div>
-<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
 <script>w3.includeHTML();</script>
 </body>
