--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-
+  <link href="./assets/css/deveb.ilkel.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,7 +34,7 @@
   Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
           </p>
           <p class="metin-gri-3 beri-2" data-deveb="ortada göbekte" data-gnl="1 1p">
-            <a data-btn="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>
+            <a data-btn="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
             <a data-btn="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
           </p>
         </div>
