--- a/belgeler/butonlar.html
+++ b/belgeler/butonlar.html
@@ -14,7 +14,7 @@
   <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-  <link href="./assets/css/deveb.ilkel.css" rel="stylesheet">
+  <link href="../assets/css/deveb.ilkel.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,8 +28,8 @@
   <div data-deveb="kaplama ortada" data-gnl="24 24p" data-ort="24 24p">
 
     <div data-gnl="23">
-      <a data-btn="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
-      <a data-btn="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
+      <a data-btn="genel" href="#">BAĞ</a>
+      <a data-btn="genel engelli" href="#">BAĞ engelli</a>
     </div>
 
   </div>
