--- a/belgeler/butonlar.html
+++ b/belgeler/butonlar.html
@@ -28,6 +28,12 @@
   <div data-deveb="kaplama ortada" data-gnl="24 24p" data-ort="24 24p">
 
     <div data-gnl="23">
+      <h1>Metin Görünümlü Bağ</h1>
+      <a data-btn="metin" href="#">BAĞ</a>
+      <a data-btn="metin engelli" href="#">BAĞ engelli</a>
+    </div>
+    <div data-gnl="23">
+      <h1>Buton Görünümlü Bağ</h1>
       <a data-btn="genel" href="#">BAĞ</a>
       <a data-btn="genel engelli" href="#">BAĞ engelli</a>
     </div>
