--- a/belgeler/butonlar.html
+++ b/belgeler/butonlar.html
@@ -29,13 +29,18 @@
 
     <div data-gnl="23">
       <h1>Metin Görünümlü Bağ</h1>
-      <a data-btn="metin" href="#">BAĞ</a>
+      <a data-btn="metin" href="#">BAĞ</a>&nbsp;
       <a data-btn="metin engelli" href="#">BAĞ engelli</a>
     </div>
     <div data-gnl="23">
       <h1>Buton Görünümlü Bağ</h1>
-      <a data-btn="genel" href="#">BAĞ</a>
+      <a data-btn="genel" href="#">BAĞ</a>&nbsp;
       <a data-btn="genel engelli" href="#">BAĞ engelli</a>
+    </div>
+    <div data-gnl="23">
+      <h1>Tek Butonlar</h1>
+      <button data-btn="genel" type="button" name="button">Buton</button>&nbsp;
+      <button data-btn="genel engelli" type="button" name="button">Buton</button>
     </div>
 
   </div>
