--- a/belgeler/butonlar.html
+++ b/belgeler/butonlar.html
@@ -40,7 +40,7 @@
     <div data-gnl="23">
       <h1>Tek Butonlar</h1>
       <button data-btn="genel" type="button" name="button">Buton</button>&nbsp;
-      <button data-btn="genel engelli" type="button" name="button">Buton</button>
+      <button data-btn="genel engelli" type="button" name="button">Buton engelli</button>
     </div>
 
   </div>
