--- a/belgeler/butonlar.html
+++ b/belgeler/butonlar.html
@@ -39,8 +39,17 @@
     </div>
     <div data-gnl="23">
       <h1>Tek Butonlar</h1>
-      <button data-btn="genel" type="button" name="button">Buton</button>&nbsp;
-      <button data-btn="genel engelli" type="button" name="button">Buton engelli</button>
+      <button data-btn="genel" type="button" name="button">genel</button>&nbsp;
+      <button data-btn="genel engelli" type="button" name="button">genel engelli</button>
+    </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <h1>Boyutlarına Göre Butonlar</h1>
+      <button data-btn="genel mnk" type="button" name="button">data-btn="genel mnk"</button>&nbsp;
+      <button data-btn="genel ufk" type="button" name="button">data-btn="genel ufk"</button>&nbsp;
+      <button data-btn="genel" type="button" name="button">data-btn="genel"</button>&nbsp;
+      <button data-btn="genel ort" type="button" name="button">data-btn="genel ort"</button>&nbsp;
+      <button data-btn="genel byk" type="button" name="button">data-btn="genel byk"</button>&nbsp;
+      <button data-btn="genel dev" type="button" name="button">data-btn="genel dev"</button>&nbsp;
     </div>
 
   </div>
