tuş kelimesi bağ kelimesine geçti

--- a/belgeler/butonlar.html
+++ b/belgeler/butonlar.html
@@ -29,27 +29,27 @@
 
     <div data-gnl="23">
       <h1>Metin Görünümlü Bağ</h1>
-      <a data-tuş="metin" href="#">BAĞ</a>&nbsp;
-      <a data-tuş="metin engelli" href="#">BAĞ engelli</a>
+      <a data-bağ="metin" href="#">BAĞ</a>&nbsp;
+      <a data-bağ="metin engelli" href="#">BAĞ engelli</a>
     </div>
     <div data-gnl="23">
       <h1>Buton Görünümlü Bağ</h1>
-      <a data-tuş="genel" href="#">BAĞ</a>&nbsp;
-      <a data-tuş="genel engelli" href="#">BAĞ engelli</a>
+      <a data-bağ="genel" href="#">BAĞ</a>&nbsp;
+      <a data-bağ="genel engelli" href="#">BAĞ engelli</a>
     </div>
     <div data-gnl="23">
       <h1>Tek Butonlar</h1>
-      <button data-tuş="genel" type="button" name="button">genel</button>&nbsp;
-      <button data-tuş="genel engelli" type="button" name="button">genel engelli</button>
+      <button data-bağ="genel" type="button" name="button">genel</button>&nbsp;
+      <button data-bağ="genel engelli" type="button" name="button">genel engelli</button>
     </div>
     <div data-deveb="göbekte" data-gnl="23">
       <h1>Boyutlarına Göre Butonlar</h1>
-      <button data-tuş="genel mnk" type="button" name="button">data-tuş="genel mnk"</button>&nbsp;
-      <button data-tuş="genel ufk" type="button" name="button">data-tuş="genel ufk"</button>&nbsp;
-      <button data-tuş="genel" type="button" name="button">data-tuş="genel"</button>&nbsp;
-      <button data-tuş="genel ort" type="button" name="button">data-tuş="genel ort"</button>&nbsp;
-      <button data-tuş="genel byk" type="button" name="button">data-tuş="genel byk"</button>&nbsp;
-      <button data-tuş="genel dev" type="button" name="button">data-tuş="genel dev"</button>&nbsp;
+      <button data-bağ="genel mnk" type="button" name="button">data-bağ="genel mnk"</button>&nbsp;
+      <button data-bağ="genel ufk" type="button" name="button">data-bağ="genel ufk"</button>&nbsp;
+      <button data-bağ="genel" type="button" name="button">data-bağ="genel"</button>&nbsp;
+      <button data-bağ="genel ort" type="button" name="button">data-bağ="genel ort"</button>&nbsp;
+      <button data-bağ="genel byk" type="button" name="button">data-bağ="genel byk"</button>&nbsp;
+      <button data-bağ="genel dev" type="button" name="button">data-bağ="genel dev"</button>&nbsp;
     </div>
 
   </div>
