--- a/belgeler/butonlar.html
+++ b/belgeler/butonlar.html
@@ -28,17 +28,17 @@
   <div data-deveb="kaplama ortada" data-gnl="24 24p" data-ort="24 24p">
 
     <div data-gnl="23">
-      <h1>Metin</h1>
+      <h1>Metin Bağı</h1>
       <a data-bağ="metin" href="#">BAĞ</a>&nbsp;
       <a data-bağ="metin engelli" href="#">BAĞ engelli</a>
     </div>
     <div data-gnl="23">
-      <h1>Basma</h1>
+      <h1>Basmalı Metin Bağı</h1>
       <a data-bağ="genel" href="#">BAĞ</a>&nbsp;
       <a data-bağ="genel engelli" href="#">BAĞ engelli</a>
     </div>
     <div data-gnl="23">
-      <h1>Tek Basmalar</h1>
+      <h1>Basma Bağ - Tekil</h1>
       <button data-bağ="genel" type="button" name="button">genel</button>&nbsp;
       <button data-bağ="genel engelli" type="button" name="button">genel engelli</button>
     </div>
