--- a/temel/header.html
+++ b/temel/header.html
@@ -1,5 +1,5 @@
 <div id="header" data-deveb="ortada göbekte" data-gnl="24 24p" class="ap-beyaz beri-alt-1 kenar-alt" style="min-height:60px;">
-  <div data-deveb="ger" data-gnl="23">
+  <div data-deveb="ger göbekte" data-gnl="23">
     <ul class="menü-genel" data-deveb="kap göbekte">
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
