--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
           </p>
           <p class="metin-gri-3 beri-2" data-deveb="ortada göbekte" data-gnl="1 1p">
-            <a data-btn="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
-            <a data-btn="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
+            <a data-bağ="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
+            <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
           </p>
         </div>
       </div>
