--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -101,11 +101,12 @@
     </div>
 
 
-    <h3>Konumlama: <span data-metin="dikkat">ger</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ger | yay</span></h3>
     <p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">yay</span></h3>
     <p>"yay" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
+    <div data-gnl="1 1p">
+      <iframe data-gnl="1" width="100%" height="300" src="//jsfiddle.net/deveb/c6vcx4st/embedded/html,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    </div>
 
     <h3>Konumlama: <span data-metin="dikkat">uzun</span></h3>
     <p>"uzun" sınıfı bir HTML etiketindeki içeriği aşağıdan yukarıya uzatarak gösterir.</p>
