--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -105,7 +105,8 @@
     <p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
     <p>"yay" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
     <div data-gnl="1 1p">
-      <iframe data-gnl="1" width="100%" height="300" src="//jsfiddle.net/deveb/c6vcx4st/embedded/html,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/c6vcx4st/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/c6vcx4st/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
 
     <h3>Konumlama: <span data-metin="dikkat">uzun</span></h3>
