Uzun uzun-ol güncellendi.

--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -109,11 +109,13 @@
       <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/c6vcx4st/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
 
-    <h3>Konumlama: <span data-metin="dikkat">uzun</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">uzun | uzun-ol</span></h3>
     <p>"uzun" sınıfı bir HTML etiketindeki içeriği aşağıdan yukarıya uzatarak gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">uzun-ol</span></h3>
     <p>"uzun-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin durumuna göre uzatır.</p>
+    <div data-gnl="1 1p">
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/qpvxv53a/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/qpvxv53a/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    </div>
 
     <h3>Konumlama: <span data-metin="dikkat">çizgide</span></h3>
     <p>"çizgide" sınıfı bir HTML etiketindeki içeriği bir çizgiye dizerek gösterir.</p>
