Konumlama belgesi güncellendi. Ters dizi vs.

--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -123,14 +123,15 @@
     <h3>Konumlama: <span data-metin="dikkat">çizgide-ol</span></h3>
     <p>"çizgide-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">ters-dizi</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ters-dizi | ters-satır | ters-sütun</span></h3>
     <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">ters-satır</span></h3>
     <p>"ters-satır" sınıfı bir HTML etiketindeki satırları aynalı olarak gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">ters-sütun</span></h3>
     <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
+    <div data-gnl="1 1p">
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/3bfdm2qm/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/3bfdm2qm/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    </div>
+
 
     <h3>Konumlama: <span data-metin="dikkat">üstte-ol | göbekte-ol | altta-ol</span></h3>
     <p>"üstte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
