--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -76,11 +76,14 @@
 
     <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç sınıfla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">taşma</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">taşma | kayma</span></h3>
     <p>"taşma" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">kayma</span></h3>
     <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
+    <div data-gnl="1 1p">
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/8e3t02t7/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/8e3t02t7/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    </div>
+
 
     <h3>Konumlama: <span data-metin="dikkat">solda | ortada | sağda</span></h3>
     <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
@@ -126,7 +129,7 @@
     <h3>Konumlama: <span data-metin="dikkat">ters-dizi | ters-satır | ters-sütun</span></h3>
     <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
     <p>"ters-satır" sınıfı bir HTML etiketindeki satırları aynalı olarak gösterir.</p>
-    <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p> 
+    <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
     <div data-gnl="1 1p">
       <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/3bfdm2qm/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
       <iframe data-gnl="1 2p" width="100%" height="300" src="//jsfiddle.net/deveb/3bfdm2qm/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
