--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -192,10 +192,28 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
   <thead>
     <tr>
       <th>Ekran Çeşitleri</th>
-      <th>Genel</th>
-      <th>Ufak</th>
-      <th>Orta</th>
-      <th>Büyük</th>
+      <th>
+        Genel <br>
+        <i class="fa fa-mobile" aria-hidden="true"></i>
+        <i class="fa fa-tablet" aria-hidden="true"></i>
+        <i class="fa fa-laptop" aria-hidden="true"></i>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
+      </th>
+      <th>
+        Ufak <br>
+        <i class="fa fa-tablet" aria-hidden="true"></i>
+        <i class="fa fa-laptop" aria-hidden="true"></i>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
+      </th>
+      <th>
+        Orta <br>
+        <i class="fa fa-laptop" aria-hidden="true"></i>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
+      </th>
+      <th>
+        Büyük <br>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
+      </th>
     </tr>
   </thead>
   <tbody>
@@ -205,10 +223,10 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
     </tr>
     <tr>
       <th>Sınıf önekleri</th>
-      <td>gnl<br><span class="metin-olumlu">telefon ve daha büyük</span> </td>
-      <td>ufk<br><span class="metin-olumlu">tablet ve daha büyük</span></td>
-      <td>ort<br><span class="metin-olumlu">dizüstü ve daha büyük</span></td>
-      <td>byk<br><span class="metin-olumlu">büyük ekranlar</span></td>
+      <td>data-gnl<br><span class="metin-olumlu">telefon ve daha büyük</span> </td>
+      <td>data-ufk<br><span class="metin-olumlu">tablet ve daha büyük</span></td>
+      <td>data-ort<br><span class="metin-olumlu">dizüstü ve daha büyük</span></td>
+      <td>data-byk<br><span class="metin-olumlu">büyük ekranlar</span></td>
     </tr>
     <tr>
       <th>Oran Ölçekleri</th>
