--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -184,7 +184,7 @@
   <h2>Kavramlar</h2>
   <h3>Ekran Çeşitleri</h3>
   <p>Ekran çeşitleri denildiğinde aklınıza gelmesi gereken ekranın fiziksel ölçeklerine uygun çözünürlük değerleridir.
-  Bu değerler belli başlı isimlerle sınıflandırılmış ve isimlendirilmiştir. Bu isimleri şöyle sıralayabiliriz; genel, kocaman, dev, büyük, orta, küçük, ufak, minik. Ancak Deveb Önyüz İskeleti genel, büyük, orta, küçük, ufak isimlerini varsayılan ayarlarında destekleyerek gelir.
+  Bu değerler belli başlı isimlerle sınıflandırılmış ve isimlendirilmiştir. Bu isimleri şöyle sıralayabiliriz; genel, kocaman, dev, büyük, orta, küçük, ufak, minik. Ancak Deveb Önyüz İskeleti genel, büyük, orta, ufak isimlerini varsayılan ayarlarında destekleyerek gelir.
 Her bir ismin kısaltılmış yazılışları vardır.</p>
 
 
