--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -188,7 +188,7 @@
 Her bir ismin kısaltılmış yazılışları vardır.</p>
 
 
-<table class="tablo" data-gnl="1 1p">
+<table class="tablo" data-gnl="tam-kaplama">
   <thead>
     <tr>
       <th>Ekran Çeşitleri</th>
