terimler kılavuzu oluşturuluyor.

--- a/temel/header.html
+++ b/temel/header.html
@@ -11,6 +11,7 @@
       <li><a href="https://data-deveb.github.io/belgeler/sekme-orgusu.html">Sekme</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/resim-orgusu.html">Resim</a></li>-->
       <li><a href="https://data-deveb.github.io/belgeler/renk-orgusu.html">Renk</a></li>
+      <li><a href="https://data-deveb.github.io/belgeler/terimler.html">Terimler</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/takim.html">Takım</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
     </ul>
